Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33520

REG: Minimizing/restoring widget when flag FramelessWindowHint and attr. AA_NativeWindows is set does not restore widget.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.3.0
    • 5.1.0 , 5.1.1
    • Widgets: Main Window
    • None
    • Windows 7
    • Set mapped for obscured 829b1d13b225e87b8a385397e2b53c7a9f8cda9e 28.10.2013), Reverted due to iOS breakge: 773610cc451bb2b4319da6567b21510022d08014 (release, 21.11.2013), fix backing store: 5adba7cba739a4befca86dca026753ea69605c31 (dev, 12.2.2014, 5.3)

      Worked in Qt5.0.1 but not anymore in Qt5.1.1. Tested also with latest stable from git (117880499754b14bbada9646b85feef066d7b959).

      Run the following program. Minimize the app from taskbar. Then restore it from taskbar -> app is not restored correctly, only a little white box can bee seen.

      #include "mainwindow.h"
      #include <QApplication>
      #include <QPushButton>
      
      int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
          QMainWindow w;
      
          qApp->setAttribute(Qt::AA_NativeWindows);
          w.setWindowFlags(
              Qt::FramelessWindowHint
              |Qt::WindowMinimizeButtonHint
              |Qt::WindowMaximizeButtonHint   );
      
      
          QWidget *centralWidget = new QWidget(&w);
          w.setCentralWidget(centralWidget);
      
          QPushButton* b = new QPushButton(centralWidget);
      
          w.show();
          return a.exec();
      }
      

        1. qtbug33520_diag.patch
          13 kB
        2. qtbug33520_linux.log
          29 kB
        3. qtbug33520_mac.log
          18 kB
        4. qtbug33520_windows.log
          18 kB
        5. qtbug33520.zip
          3 kB
        For Gerrit Dashboard: QTBUG-33520
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes